--- a/trailsapp/main/templates/index.html
+++ b/trailsapp/main/templates/index.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 <h1>Hello</h1>
-<p>Your random number is: {{ random_number }}</p>
-<pre>You are here: {{ test }}</pre>
+<div>{{ map | safe }}</div>
 </body>
 </html>
